# mixing-forum-analyzer

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  api.py  app.py  app_backup.py  app_emergency.py  check_python_version.py  docker-compose.yml  gitignore  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sitecustomize.py  test_streamlit_compatibility.py
.github/: settings.yml
.github/workflows/: ci.yml  deploy.yml  eval_ci.yml  test.yml  topics.yml
app/: app.py  app_fixed.py  app_minimal.py  app_old.py
data/: README.md  dataset_manifest.json  eval_week2_sbert.csv  keyphrases.json  preset_map.json  rule_tags.json  sample_corpus.json
data/api_keys/: README.md
data/embeddings/: README.md
data/feedback/: README.md
data/personal_presets/: README.md
docker/: Dockerfile  compose.yaml
docs/: metrics_for_readme.md  setup_guide.md
evaluation/: __init__.py  metrics.py
notebooks/: 01_tokenizer.ipynb  02_evaluation.ipynb  02_tfidf.ipynb  03_similarity.ipynb  04_spacy.ipynb  05_eval.ipynb  06_keyphrases.ipynb  07_rules.ipynb  08_clustering.ipynb  09_eval_week2.ipynb
presets/: __init__.py
scripts/: build_keyphrases.py  build_rule_tags.py  clean.sh  crawl_kvr_pilot.py  deploy_to_hf.py  run_streamlit.sh  setup.sh
src/app/: main.py  (+1 more)
tests/: conftest.py  test_api_access.py  test_api_features.py  test_assistant_summary.py  test_audio_analysis.py  test_basic.py  test_data_ingestion.py  test_feedback.py  test_imports.py  test_integration.py  test_kvr_crawler.py  test_personal_presets.py  test_presets.py  test_search.py  test_smoke.py
(+24 files in other folders)
